# specr

./: .gitignore  Cargo.toml  README.md  clone-minirust.sh  file.rs  rust-toolchain.toml  specr.cfg  specr.toml
.github/workflows/: ci.yml
gccompat-derive/: Cargo.toml
gccompat-derive/src/: lib.rs
libspecr/: Cargo.toml  README.md  endianness.rs  env.rs  hidden.rs  impls.rs  intrinsics.rs  list.rs  map.rs  mod.rs  name.rs  nondet.rs  obj.rs  ret.rs  set.rs  string.rs
libspecr/bigint/: func.rs  mod.rs  ops.rs  to.rs
libspecr/gccompat-derive/: Cargo.toml
libspecr/gccompat-derive/src/: lib.rs
libspecr/gccow/: impls.rs  internal.rs  mod.rs  sparse_vec.rs  trait_passthrough.rs
libspecr/impls/: endianness.rs  mod.rs
libspecr/inject/: align.rs  endianness.rs  mod.rs  ndresult.rs  size.rs
libspecr/int/: func.rs  mod.rs  ops.rs  to.rs
libspecr/list/: func.rs  impls.rs  index.rs  iter.rs  mod.rs  trait_impls.rs
libspecr/map/: func.rs  impls.rs  iter.rs  mod.rs
libspecr/set/: func.rs  impls.rs  iter.rs  mod.rs
libspecr/src/: align.rs  bigint.rs  distribution.rs  endianness.rs  env.rs  hidden.rs  intrinsics.rs  lib.rs  list.rs  mutability.rs  name.rs  ndresult.rs  nondet.rs  obj.rs  option.rs  ret.rs  signedness.rs  size.rs  string.rs
libspecr/src/bigint/: mod.rs
libspecr/src/gc/: gccompat.rs  gccow.rs  mod.rs  state.rs  trait_passthrough.rs
libspecr/src/gccow/: impls.rs  internal.rs  mod.rs  sparse_vec.rs  trait_passthrough.rs
libspecr/src/hidden/: mod.rs  obj.rs  ret.rs
libspecr/src/int/: func.rs  mod.rs  ops.rs  step.rs  to.rs
libspecr/src/list/: func.rs  iter.rs  mod.rs
libspecr/src/map/: func.rs  iter.rs  mod.rs
libspecr/src/serde/: essentials.rs  mod.rs  newtypes.rs
libspecr/src/set/: func.rs  iter.rs  mod.rs
libspecr/src/write/: func.rs  mod.rs  wrapper.rs
minimize/: Cargo.toml  alltests.sh  cov.sh  file.rs  rust-toolchain.toml
minimize/intrinsics/: Cargo.toml
minimize/intrinsics/src/: lib.rs
minimize/minirust-gen/: Cargo.toml
minimize/minirust-gen/src/: lib.rs
minimize/project-stable-mir/: Cargo.toml
minimize/project-stable-mir/src/: very_unstable.rs
minimize/src/: bb.rs  chunks.rs  constant.rs  dump.rs  get.rs  main.rs  program.rs  run.rs  rvalue.rs  test.rs  ty.rs
minimize/src/dump/: expr.rs  mod.rs
minimize/src/test/: env.rs  mod.rs
minimize/tests/: 1.rs  2.rs  3.rs  4.rs  5.rs  6.rs  7.rs  compiletest.rs  conv.rs  rust.sh
minimize/tests/files/: 2.rs  3.rs  5.rs  6.rs  7.rs  inv_ptr.rs  nullptr.rs  unaligned.rs
minimize/tests/pass/: calls.rs  calls.stdout  casts.rs  casts.stdout  ops.rs  zst.rs
minimize/tests/ub/: inv_bool.stderr  inv_ptr.rs
minirust-gen/src/: lang.rs  prelude.rs
minisyntax/: Cargo.toml  README.md
minisyntax/src/: lib.rs  run.rs
minisyntax/src/dump/: expr.rs
minisyntax/src/fmt/: expr.rs  mod.rs  ty.rs
minitest/: Cargo.toml  README.md  cov.sh
minitest/src/: lib.rs
minitest/src/ill_formed/: neg_count_array.rs
minitest/src/pass/: dynamic_memory.rs  zst_array.rs  (+3 more)
miniutil/: Cargo.toml
miniutil/src/: lib.rs  run.rs
specr-transpile/: Cargo.toml  README.md
specr-transpile/src/: argmatch.rs  auto_derive.rs  auto_obj_bound.rs  config.rs  gccompat_impl.rs  imports.rs  index.rs  let_else.rs  main.rs  merge_impls.rs  nameres.rs  ret.rs  source.rs
specr-transpile/src/typerec/: fix.rs  mod.rs  pat_idents.rs  wrap.rs
src/: access.rs  argmatch.rs  autoattr.rs  autobounds.rs  autoclone.rs  autocopy.rs  baselib.rs  baselib_use.rs  bb.rs  clear_verbatim.rs  cp.rs  dump.rs  gccompat_impl.rs  imports.rs  mac.rs  main.rs  merge_impls.rs  program.rs  ret.rs  source.rs  translate.rs  ty.rs  typerec.rs
src/typerec/: fix.rs  inf_enums.rs  mod.rs  pat_idents.rs  wrap.rs
template/: Cargo.toml
template/src/: lib.rs
(+106 files in other folders)
