[package]
name = "libspecr"
description = "standard library for specr lang"
version = "0.1.5"
edition = "2021"
repository = "https://github.com/memoryleak47/minirust-tooling"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/libspecr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.15"
num-integer = "0.1.45"
im = "15.1.0"
rand = "0.8.5"
gccompat-derive = "0.1.0"
