[package]
name = "libspecr"
description = "standard library for specr lang"
# This version should be the same as the specr-transpile version.
version = "0.1.37"
edition = "2021"
repository = "https://github.com/minirust/minirust-tooling"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/libspecr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.15"
num-integer = "0.1.45"
im = { version = "15.1.0", features = ["serde"] }
rand = "0.8.5"
gccompat-derive = { path = "../gccompat-derive", version = "0.1.2" }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
