[package]
name = "specr-transpile"
description = "Converts Specr lang code to Rust"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/memoryleak47/minirust-tooling"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
