[package]
name = "specr-transpile"
description = "Converts Specr lang code to Rust"
# This version should be the same as the libspecr version.
version = "0.1.28"
rust-version = "1.65"
edition = "2021"
repository = "https://github.com/minirust/minirust-tooling"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.9", features = ["full", "extra-traits", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
toml = "0.7.2"
prettyplease = "0.2"
